--- a/index.html
+++ b/index.html
@@ -3754,16 +3754,21 @@ normalization</p>
 
   
   
+
   
   
-  
-  <!-- UPDATED AWARDS/GRANTS SECTION -->
+
+
+
+
+
+<!-- UPDATED AWARDS/GRANTS SECTION -->
 <section id="awards" class="section mountain-bg">
   <div class="max-w-7xl mx-auto">
     <h2 class="orbitron text-4xl font-bold text-center mb-12">
       <span class="status-indicator status-active"></span>AWARDS & GRANTS
     </h2>
-    
+
     <!-- Hackathon Awards Grid (Parallel/Side-by-Side Layout) -->
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-16">
       <!-- Energy Hackathon Card -->
@@ -3772,26 +3777,72 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-success-green">1st Place,20th National Technological Festival, <em>LOCUS 2024</em> </h3>
+        <div class="flex items-center mb-4"> <!-- Flex for title + logo alignment -->
+          <img src="./graphics/logo1.png" alt="LOCUS 2024 Logo" class="w-12 h-12 object-cover mr-3 rounded"> <!-- Square logo, height ~2 lines -->
+          <h3 class="orbitron text-xl font-bold text-success-green flex-1">1st Place, 20th National Technological Festival, <em>LOCUS 2024</em></h3>
+        </div>
         <img src="./graphics/power2.jpg" alt="Energy Hackathon Winning Picture/Trophy" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/power2.jpg', 'Power Hackathon Win')">
-        <p class="text-xs text-center mt-1"> Group Photo After Winning Event </p>
-<p class="text-sm mb-4"> 
-          While I was leading our team WEAUTOMAE, Team secured first place and were honored by the <strong>Honourable Dignitaries of the Nepal Electricity Authority (NEA)</strong>. The winning project, the <strong>AI-Integrated Home Automation System</strong>, successfully demonstrated a solution for retrofitting traditional appliances using an <em>ESP32 controller</em>, transducer, data logging, communication system, and relays. The system initially relied on a local computer to run its AI model, which uses real-time data to autonomously predict and actuate appliance states, proving the viability of using behavioral patterns for enhanced energy efficiency.</p>
+        <p class="text-xs text-center mt-1">Group Photo After Winning Event</p>
+        <p class="text-sm mb-4"> 
+          While I was leading our team <strong>WEAUTOMATE</strong>, the team secured first place and were honored by the <strong>Honourable Dignitaries of the Nepal Electricity Authority (NEA)</strong>. The winning project, the <strong>AI-Integrated Home Automation System</strong>, successfully demonstrated a solution for retrofitting traditional appliances using an <em>ESP32 controller</em>, transducer, data logging, communication system, and relays. The system initially relied on a local computer to run its AI model, which uses real-time data to autonomously predict and actuate appliance states, proving the viability of using behavioral patterns for enhanced energy efficiency.
+        </p>
+        <!-- Carousel for 3 Additional Photos (Self-Scrolling) -->
+        <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
+          <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="energy-carousel" style="transform: translateX(0%);">
+            <div class="carousel-item flex-shrink-0 w-full text-center">
+              <img src="./graphics/energy1.jpg" alt="Energy Hackathon Project Demo 1" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/energy1.jpg', 'Energy Hackathon Photo 1')">
+              <p class="text-xs mt-1">Project demo during presentation.</p>
+            </div>
+            <div class="carousel-item flex-shrink-0 w-full text-center">
+              <img src="./graphics/energy2.jpg" alt="Energy Hackathon Team Discussion" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/energy2.jpg', 'Energy Hackathon Photo 2')">
+              <p class="text-xs mt-1">Team brainstorming session.</p>
+            </div>
+            <div class="carousel-item flex-shrink-0 w-full text-center">
+              <img src="./graphics/energy3.jpg" alt="Energy Hackathon Award Ceremony" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/energy3.jpg', 'Energy Hackathon Photo 3')">
+              <p class="text-xs mt-1">Award ceremony moment.</p>
+            </div>
+          </div>
+          <button onclick="slideCarousel('energy-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
+          <button onclick="slideCarousel('energy-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
+        </div>
       </div>
 
       <!-- Power Hackathon Card -->
       <div class="project-card hologram">
-        <h3 class="orbitron text-xl font-bold mb-4 text-success-green"> Power Hackathon Champion,<em> Commercialized AI Home Automation </h3>
-        <img src="./graphics/power1.jpg" alt="Physical Model Created " class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/power1.jpg', 'Hardware')">
+        <div class="flex items-center mb-4"> <!-- Flex for title + logo alignment -->
+          <img src="./graphics/logo2.png" alt="Electromela 2.0 Logo" class="w-12 h-12 object-cover mr-3 rounded"> <!-- Square logo, height ~2 lines -->
+          <h3 class="orbitron text-xl font-bold text-success-green flex-1">Power Hackathon Champion, <em>Commercialized AI Home Automation</em></h3>
+        </div>
+        <img src="./graphics/power1.jpg" alt="Physical Model Created" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/power1.jpg', 'Hardware')">
         <p class="text-xs text-center mt-1">Developed Hardware Model.</p>
-       
-  <p class="text-sm mb-4">
-We achieved our second major victory by winning the Power Hackathon at Electromela 2.0,another major Electrical Engineering projects based techfest. Our  Project  was extensively modified into a market-available product. We refined the hardware with a higher rated  actuators, polished  enclosure, achieved superior predictive accuracy through an extensive training dataset, and integrated Google Home control for easier accessibility.</p>
-
-  <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Energy Hackathon Details" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Certificate/Details</a>
+        <p class="text-sm mb-4">
+          We achieved our second major victory by winning the Power Hackathon at <em>Electromela 2.0</em>, another major Electrical Engineering projects-based techfest. Our project was extensively modified into a market-available product. We refined the hardware with higher-rated actuators, polished enclosure, achieved superior predictive accuracy through an extensive training dataset, and integrated <em>Google Home control</em> for easier accessibility.
+        </p>
+        <!-- Carousel for 3 Additional Photos (Self-Scrolling) -->
+        <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
+          <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="power-carousel" style="transform: translateX(0%);">
+            <div class="carousel-item flex-shrink-0 w-full text-center">
+              <img src="./graphics/power3.jpg" alt="Power Hackathon Prototype Build" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/power3.jpg', 'Power Hackathon Photo 1')">
+              <p class="text-xs mt-1">Prototype assembly process.</p>
+            </div>
+            <div class="carousel-item flex-shrink-0 w-full text-center">
+              <img src="./graphics/power4.jpg" alt="Power Hackathon Testing Phase" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/power4.jpg', 'Power Hackathon Photo 2')">
+              <p class="text-xs mt-1">Hardware testing with actuators.</p>
+            </div>
+            <div class="carousel-item flex-shrink-0 w-full text-center">
+              <img src="./graphics/power5.jpg" alt="Power Hackathon Commercial Demo" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/power5.jpg', 'Power Hackathon Photo 3')">
+              <p class="text-xs mt-1">Commercialized product demo with Google Home integration.</p>
+            </div>
+          </div>
+          <button onclick="slideCarousel('power-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
+          <button onclick="slideCarousel('power-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
+        </div>
+        <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Power Hackathon Details" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Certificate/Details</a>
       </div>
     </div>
 
+ 
+ 
     <!-- Research Grant Sub-Section (Below Hackathons) -->
     <div class="grid grid-cols-1 lg:grid-cols-1 gap-8 mb-16">
       <div class="project-card">
@@ -4595,6 +4646,7 @@ We achieved our second major victory by winning the Power Hackathon at Electrome
 </body>
 </html>
 ```
+
 
 
 
