--- a/index.html
+++ b/index.html
@@ -703,162 +703,151 @@
 
 
  
-  
 <section id="education" class="section">
-    <!-- Your HTML remains exactly the same -->
-    <div class="max-w-7xl">
-      <h2 class="orbitron section-title">
-        <span class="status-indicator status-active"></span>
-        ACADEMICS
-      </h2>
+  <div class="max-w-7xl">
+    <h2 class="orbitron section-title">
+      <span class="status-indicator status-active"></span>
+      ACADEMICS
+    </h2>
 
-      <!-- Degrees Section -->
-      <h3 class="subsection-title orbitron">Degrees Received</h3>
-      <div class="degrees-container">
-
-        <!-- Bachelor's Degree -->
-        <div class="project-card">
-          <div class="degree-left">
-            <img src="./assets/education/nec_logo.png" alt="Nepal Engineering College" class="degree-logo">
-            <p class="degree-period">2022 - Present</p>
-          </div>
-
-          <div class="degree-right">
-            <h4 class="degree-title orbitron">Bachelor of Technology in Computer Engineering</h4>
-            <p class="scholarship-text orbitron">🏆 IOE Merit-Based Scholarship Recipient</p>
-            <p class="institution-text orbitron">Institute of Engineering-Pashchimanchal Campus</p>
-          </div>
+    <!-- Degrees Section -->
+    <h3 class="subsection-title orbitron">Degrees Received</h3>
+    <div class="degrees-container">
+      <!-- Bachelor's Degree -->
+      <div class="project-card">
+        <div class="degree-left">
+          <img src="./assets/education/nec_logo.png" alt="Nepal Engineering College" class="degree-logo">
+          <p class="degree-period">2022 - Present</p>
         </div>
-
-        <!-- Higher Secondary -->
-        <div class="project-card">
-          <div class="degree-left">
-            <img src="./assets/education/sos_logo.png" alt="SOS Hermann Gmeiner" class="degree-logo">
-            <p class="degree-period">2020 - 2022</p>
-          </div>
-
-          <div class="degree-right">
-            <h4 class="degree-title orbitron">Higher Secondary Education (Science)</h4>
-            <p class="scholarship-text orbitron">🏆 Academic Excellence Scholarship Recipient</p>
-            <p class="institution-text orbitron">SOS Hermann Gmeiner Higher Secondary School</p>
-          </div>
-        </div>
-
-      </div>
-
-      <!-- Certifications Section -->
-      <div class="certifications-section">
-        <h3 class="subsection-title orbitron">Professional Certifications</h3>
-        <div class="certifications-grid">
-          
-          <div class="cert-card">
-            <div class="cert-top" style="background: #dc2626;">
-              <img src="./assets/education/stanford_logo.png" alt="Stanford" class="cert-logo">
-            </div>
-            <div class="cert-bottom">
-              <h4 class="cert-title">Machine Learning</h4>
-              <p class="cert-provider">Andrew Ng</p>
-            </div>
-          </div>
-
-          <div class="cert-card">
-            <div class="cert-top" style="background: #374151;">
-              <img src="./assets/education/deep_learning_logo.png" alt="Deep Learning" class="cert-logo">
-            </div>
-            <div class="cert-bottom">
-              <h4 class="cert-title">Deep Learning Specialization</h4>
-              <p class="cert-provider">Andrew Ng</p>
-            </div>
-          </div>
-
-          <div class="cert-card">
-            <div class="cert-top" style="background: #10b981;">
-              <img src="./assets/education/google_logo.png" alt="Google Cloud" class="cert-logo">
-            </div>
-            <div class="cert-bottom">
-              <h4 class="cert-title">Machine Learning on GCP</h4>
-              <p class="cert-provider">Google Cloud Training</p>
-            </div>
-          </div>
-
-          <div class="cert-card">
-            <div class="cert-top" style="background: #ef4444;">
-              <img src="./assets/education/ibm_logo.png" alt="IBM" class="cert-logo">
-            </div>
-            <div class="cert-bottom">
-              <h4 class="cert-title">Data Science Professional</h4>
-              <p class="cert-provider">IBM</p>
-            </div>
-          </div>
-
-          <div class="cert-card">
-            <div class="cert-top" style="background: #3b82f6;">
-              <img src="./assets/education/microsoft_logo.png" alt="Microsoft" class="cert-logo">
-            </div>
-            <div class="cert-bottom">
-              <h4 class="cert-title">Big Data Analytics</h4>
-              <p class="cert-provider">Microsoft</p>
-            </div>
-          </div>
-
-          <div class="cert-card">
-            <div class="cert-top" style="background: #f97316;">
-              <img src="./assets/education/ibm_logo.png" alt="IBM" class="cert-logo">
-            </div>
-            <div class="cert-bottom">
-              <h4 class="cert-title">Advanced Data Science</h4>
-              <p class="cert-provider">IBM</p>
-            </div>
-          </div>
-
+        <div class="degree-right">
+          <h4 class="degree-title orbitron">Bachelor of Technology in Computer Engineering</h4>
+          <p class="scholarship-text orbitron">🏆 IOE Merit-Based Scholarship Recipient</p>
+          <p class="institution-text orbitron">Institute of Engineering-Pashchimanchal Campus</p>
         </div>
       </div>
 
-      <!-- Call to Action -->
-      <div class="cta-container">
-        <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Education%20Details" class="cta-btn orbitron">
-          Request Education Details
-        </a>
+      <!-- Higher Secondary -->
+      <div class="project-card">
+        <div class="degree-left">
+          <img src="./assets/education/sos_logo.png" alt="SOS Hermann Gmeiner" class="degree-logo">
+          <p class="degree-period">2020 - 2022</p>
+        </div>
+        <div class="degree-right">
+          <h4 class="degree-title orbitron">Higher Secondary Education (Science)</h4>
+          <p class="scholarship-text orbitron">🏆 Academic Excellence Scholarship Recipient</p>
+          <p class="institution-text orbitron">SOS Hermann Gmeiner Higher Secondary School</p>
+        </div>
       </div>
-
     </div>
+
+    <!-- Certifications Section -->
+    <div class="certifications-section">
+      <h3 class="subsection-title orbitron">Professional Certifications</h3>
+      <div class="certifications-grid">
+        <div class="cert-card">
+          <div class="cert-top cert-top--stanford">
+            <img src="./assets/education/stanford_logo.png" alt="Stanford" class="cert-logo">
+          </div>
+          <div class="cert-bottom">
+            <h4 class="cert-title">Machine Learning</h4>
+            <p class="cert-provider">Andrew Ng</p>
+          </div>
+        </div>
+
+        <div class="cert-card">
+          <div class="cert-top cert-top--deep-learning">
+            <img src="./assets/education/deep_learning_logo.png" alt="Deep Learning" class="cert-logo">
+          </div>
+          <div class="cert-bottom">
+            <h4 class="cert-title">Deep Learning Specialization</h4>
+            <p class="cert-provider">Andrew Ng</p>
+          </div>
+        </div>
+
+        <div class="cert-card">
+          <div class="cert-top cert-top--google">
+            <img src="./assets/education/google_logo.png" alt="Google Cloud" class="cert-logo">
+          </div>
+          <div class="cert-bottom">
+            <h4 class="cert-title">Machine Learning on GCP</h4>
+            <p class="cert-provider">Google Cloud Training</p>
+          </div>
+        </div>
+
+        <div class="cert-card">
+          <div class="cert-top cert-top--ibm">
+            <img src="./assets/education/ibm_logo.png" alt="IBM" class="cert-logo">
+          </div>
+          <div class="cert-bottom">
+            <h4 class="cert-title">Data Science Professional</h4>
+            <p class="cert-provider">IBM</p>
+          </div>
+        </div>
+
+        <div class="cert-card">
+          <div class="cert-top cert-top--microsoft">
+            <img src="./assets/education/microsoft_logo.png" alt="Microsoft" class="cert-logo">
+          </div>
+          <div class="cert-bottom">
+            <h4 class="cert-title">Big Data Analytics</h4>
+            <p class="cert-provider">Microsoft</p>
+          </div>
+        </div>
+
+        <div class="cert-card">
+          <div class="cert-top cert-top--ibm-advanced">
+            <img src="./assets/education/ibm_logo.png" alt="IBM" class="cert-logo">
+          </div>
+          <div class="cert-bottom">
+            <h4 class="cert-title">Advanced Data Science</h4>
+            <p class="cert-provider">IBM</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Call to Action -->
+    <div class="cta-container">
+      <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Education%20Details" class="cta-btn orbitron">
+        Request Education Details
+      </a>
+    </div>
+  </div>
 </section>
 
 <style>
-  /* Scoped CSS variables for #education section */
+  /* Scoped CSS variables and base styles for #education section */
   #education {
     --primary-blue: #3b82f6;
     --accent-cyan: #1dd1a1;
     --accent-green: #0ab57b;
     font-family: 'Arial', sans-serif;
-    background: #0a0e27;
     color: #e2e8f0;
-    padding: 60px 20px;
+    padding: 3.75rem 1.25rem;
+    background: transparent; /* Inherit parent background */
   }
 
-  /* Container */
   #education .max-w-7xl {
-    max-width: 1100px;
+    max-width: 68.75rem;
     margin: 0 auto;
   }
 
-  /* Section Title */
   #education .section-title {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 12px;
+    gap: 0.75rem;
     font-size: 2.25rem;
     font-weight: 700;
-    letter-spacing: 2px;
-    margin-bottom: 50px;
+    letter-spacing: 0.125rem;
+    margin-bottom: 3.125rem;
     text-transform: uppercase;
     font-family: 'Orbitron', sans-serif;
   }
 
   #education .status-indicator {
-    width: 12px;
-    height: 12px;
+    width: 0.75rem;
+    height: 0.75rem;
     border-radius: 50%;
     display: inline-block;
     animation: pulse 2s infinite;
@@ -866,44 +855,39 @@
 
   #education .status-active {
     background: linear-gradient(180deg, var(--accent-cyan), var(--accent-green));
-    box-shadow: 0 0 12px rgba(29, 209, 161, 0.6);
+    box-shadow: 0 0 0.75rem rgba(29, 209, 161, 0.6);
   }
 
   @keyframes pulse {
-    0%, 100% { opacity: 1; transform: scale(1); }
-    50% { opacity: 0.7; transform: scale(0.95); }
+    0%, 100% { transform: scale(1); }
+    50% { transform: scale(0.95); }
   }
 
-  /* Subsection Title */
   #education .subsection-title {
-    margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 1.875rem;
     font-size: 1.5rem;
     color: var(--accent-cyan);
-    letter-spacing: 1.5px;
+    letter-spacing: 0.09375rem;
     text-align: center;
     font-weight: 600;
     font-family: 'Orbitron', sans-serif;
   }
 
-  /* Degrees Container */
   #education .degrees-container {
-    margin-top: 30px;
+    margin-top: 1.875rem;
     display: grid;
-    gap: 30px;
-    grid-template-columns: 1fr;
+    gap: 1.875rem;
   }
 
-  /* Project Card */
   #education .project-card {
     background: linear-gradient(135deg, rgba(30, 41, 59, 0.4), rgba(15, 23, 42, 0.6));
     border: 1px solid rgba(59, 130, 246, 0.2);
-    padding: 28px;
-    border-radius: 12px;
+    padding: 1.75rem;
+    border-radius: 0.75rem;
     display: flex;
-    gap: 28px;
+    gap: 1.75rem;
     align-items: center;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(10px);
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
@@ -916,7 +900,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 3px;
+    height: 0.1875rem;
     background: linear-gradient(90deg, var(--accent-cyan), var(--primary-blue));
     opacity: 0;
     transition: opacity 0.4s ease;
@@ -924,69 +908,64 @@
 
   #education .project-card:hover {
     border-color: var(--accent-cyan);
-    transform: translateY(-5px);
-    box-shadow: 0 16px 40px rgba(29, 209, 161, 0.25);
+    transform: translateY(-0.3125rem);
+    box-shadow: 0 1rem 2.5rem rgba(29, 209, 161, 0.25);
   }
 
   #education .project-card:hover::before {
     opacity: 1;
   }
 
-  /* Left Column: Logo + Year */
   #education .degree-left {
-    flex: 0 0 130px;
+    flex: 0 0 8.125rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 12px;
+    gap: 0.75rem;
   }
 
   #education .degree-logo {
-    width: 100px;
-    height: 100px;
+    width: 6.25rem;
+    height: 6.25rem;
     object-fit: cover;
     border-radius: 50%;
     border: 3px solid var(--accent-cyan);
-    box-shadow: 0 8px 20px rgba(29, 209, 161, 0.3);
+    box-shadow: 0 0.5rem 1.25rem rgba(29, 209, 161, 0.3);
     transition: all 0.3s ease;
     background: white;
-    padding: 4px;
+    padding: 0.25rem;
   }
 
   #education .project-card:hover .degree-logo {
     transform: scale(1.05);
-    box-shadow: 0 12px 30px rgba(29, 209, 161, 0.5);
+    box-shadow: 0 0.75rem 1.875rem rgba(29, 209, 161, 0.5);
   }
 
   #education .degree-period {
     font-size: 0.875rem;
     color: #94a3b8;
-    margin: 0;
     text-align: center;
     font-weight: 500;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.03125rem;
   }
 
-  /* Right Column: Content */
   #education .degree-right {
-    flex: 1 1 auto;
+    flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 0.75rem;
   }
 
   #education .degree-title {
-    margin: 0;
     font-size: 1.5rem;
     font-weight: 700;
     color: #e6eef9;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.03125rem;
     line-height: 1.3;
     font-family: 'Orbitron', sans-serif;
   }
 
   #education .institution-text {
-    margin: 0;
     font-size: 1rem;
     color: #cbd5e1;
     line-height: 1.6;
@@ -994,19 +973,18 @@
     font-family: 'Orbitron', sans-serif;
   }
 
-  /* Scholarship Badge */
   #education .scholarship-text {
     display: inline-block;
     font-size: 0.9rem;
-    padding: 8px 16px;
-    border-radius: 20px;
+    padding: 0.5rem 1rem;
+    border-radius: 1.25rem;
     align-self: flex-start;
     background: linear-gradient(135deg, rgba(29, 209, 161, 0.15), rgba(10, 181, 123, 0.1));
     border: 1px solid rgba(29, 209, 161, 0.3);
     color: var(--accent-cyan);
-    box-shadow: 0 4px 12px rgba(29, 209, 161, 0.1);
+    box-shadow: 0 0.25rem 0.75rem rgba(29, 209, 161, 0.1);
     font-weight: 600;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.01875rem;
     transition: all 0.3s ease;
     font-family: 'Orbitron', sans-serif;
   }
@@ -1016,42 +994,48 @@
     border-color: var(--accent-cyan);
   }
 
-  /* Certifications Section */
   #education .certifications-section {
-    margin-top: 80px;
+    margin-top: 5rem;
   }
 
   #education .certifications-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
-    margin-top: 30px;
+    gap: 1.875rem;
+    margin-top: 1.875rem;
   }
 
   #education .cert-card {
-    border-radius: 12px;
+    border-radius: 0.75rem;
     overflow: hidden;
     background: white;
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.15);
   }
 
   #education .cert-card:hover {
-    transform: translateY(-8px);
-    box-shadow: 0 16px 32px rgba(0, 0, 0, 0.25);
+    transform: translateY(-0.5rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25);
   }
 
   #education .cert-top {
-    padding: 40px 20px;
+    padding: 2.5rem 1.25rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 140px;
+    min-height: 8.75rem;
   }
 
+  #education .cert-top--stanford { background: #dc2626; }
+  #education .cert-top--deep-learning { background: #374151; }
+  #education .cert-top--google { background: #10b981; }
+  #education .cert-top--ibm { background: #ef4444; }
+  #education .cert-top--microsoft { background: #3b82f6; }
+  #education .cert-top--ibm-advanced { background: #f97316; }
+
   #education .cert-logo {
-    width: 70px;
-    height: 70px;
+    width: 4.375rem;
+    height: 4.375rem;
     object-fit: contain;
     transition: transform 0.3s ease;
   }
@@ -1061,7 +1045,7 @@
   }
 
   #education .cert-bottom {
-    padding: 20px;
+    padding: 1.25rem;
     background: #f8fafc;
     border-top: 1px solid #e2e8f0;
   }
@@ -1070,7 +1054,7 @@
     font-size: 1.125rem;
     font-weight: 700;
     color: #1e293b;
-    margin-bottom: 6px;
+    margin-bottom: 0.375rem;
     font-family: 'Orbitron', sans-serif;
   }
 
@@ -1080,103 +1064,65 @@
     font-weight: 500;
   }
 
-  /* CTA Button */
   #education .cta-container {
     text-align: center;
-    margin-top: 60px;
+    margin-top: 3.75rem;
   }
 
   #education .cta-btn {
     display: inline-block;
     background: linear-gradient(135deg, var(--primary-blue), var(--accent-cyan));
     color: #fff;
-    padding: 16px 40px;
-    border-radius: 8px;
+    padding: 1rem 2.5rem;
+    border-radius: 0.5rem;
     text-decoration: none;
     font-weight: 700;
     font-size: 1rem;
     transition: all 0.3s ease;
-    box-shadow: 0 8px 20px rgba(59, 130, 246, 0.3);
-    letter-spacing: 1px;
+    box-shadow: 0 0.5rem 1.25rem rgba(59, 130, 246, 0.3);
+    letter-spacing: 0.0625rem;
     text-transform: uppercase;
     font-family: 'Orbitron', sans-serif;
   }
 
   #education .cta-btn:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 12px 30px rgba(59, 130, 246, 0.5);
+    transform: translateY(-0.125rem);
+    box-shadow: 0 0.75rem 1.875rem rgba(59, 130, 246, 0.5);
   }
 
-  /* Responsive Design */
-  @media (max-width: 1024px) {
+  @media (max-width: 64rem) {
     #education .certifications-grid {
       grid-template-columns: repeat(2, 1fr);
     }
   }
 
-  @media (max-width: 768px) {
-    #education .section-title {
-      font-size: 1.75rem;
-    }
-
-    #education .subsection-title {
-      font-size: 1.25rem;
-    }
-
+  @media (max-width: 48rem) {
+    #education .section-title { font-size: 1.75rem; }
+    #education .subsection-title { font-size: 1.25rem; }
     #education .project-card {
       flex-direction: row;
-      gap: 20px;
+      gap: 1.25rem;
       align-items: flex-start;
-      padding: 20px;
+      padding: 1.25rem;
     }
-
-    #education .degree-left {
-      flex: 0 0 100px;
-    }
-
-    #education .degree-logo {
-      width: 80px;
-      height: 80px;
-    }
-
-    #education .degree-period {
-      font-size: 0.75rem;
-    }
-
-    #education .degree-title {
-      font-size: 1.25rem;
-    }
-
-    #education .certifications-grid {
-      grid-template-columns: 1fr;
-    }
+    #education .degree-left { flex: 0 0 6.25rem; }
+    #education .degree-logo { width: 5rem; height: 5rem; }
+    #education .degree-period { font-size: 0.75rem; }
+    #education .degree-title { font-size: 1.25rem; }
+    #education .certifications-grid { grid-template-columns: 1fr; }
   }
 
-  @media (max-width: 480px) {
+  @media (max-width: 30rem) {
     #education .project-card {
       flex-direction: column;
       align-items: center;
       text-align: center;
     }
-
-    #education .degree-left {
-      flex-direction: column;
-      gap: 12px;
-      align-items: center;
-    }
-
-    #education .degree-right {
-      width: 100%;
-      align-items: center;
-    }
-
-    #education .scholarship-text {
-      align-self: center;
-    }
+    #education .degree-left { gap: 0.75rem; align-items: center; }
+    #education .degree-right { width: 100%; align-items: center; }
+    #education .scholarship-text { align-self: center; }
   }
 </style>
-
-
 
 
   
@@ -5339,6 +5285,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
